@@ -474,6 +474,8 @@ create a page or new section.
 * (bug 30466) Entries in iwlinks table are now cleared when moving a page over
   redirect
 * (bug 31674) Can't edit watchlist if it contains special pages
+* (bug 32100) Installer complains about Suhosin GET limit even if it is
+  already set above 1024 bytes
 
 === API changes in 1.18 ===
 * BREAKING CHANGE: action=watch now requires POST and token.
